@@ -4,6 +4,7 @@ CHANGELOG FOR ATOMSK
 
 Master
 ------
+- in mode "--interpolate", auxiliary properties will now be interpolated between initial and final systems.
 - fixed a bug in mode "--polycrystal" that stopped the mode just after reading the seed.
 - fixed a bug when writing LAMMPS data files (*.lmp), where the atom "types" were not correctly counted when several types corresponded to the same chemical species. Thanks to Benedikt Eggle-Sievers, Max-Planck-Institut fuer Eisenforschung GmbH, Germany, for pointing out this bug.
 
